--- a/home.html
+++ b/home.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Oscar Ngombo</title>
+    <title>Name of site</title>
     <link rel="stylesheet" type="text/css" href="home.css">
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h1 id="hdr">OSCAR TINGA NGOMBO</h1>
+            <h1 id="hdr">I am A cool Transtion</h1>
             <div id="btnz">
                 <button class="btn" onclick="var m=document.getElementById('home');
 	an(m,0)">Home</button>
@@ -24,7 +24,7 @@
         <main>
             <div class="menuitem" id="home">
                 <div class="content">
-                    <h1>Oscar Ngombo</h1>
+                    <h1>I am a heading</h1>
 
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quas, reiciendis harum culpa dolorem illo pariatur corporis ullam mollitia non, maiores porro maxime quaerat laborum! Iusto debitis voluptates nemo tenetur, quas culpa aliquam facere eaque
@@ -66,13 +66,44 @@
             </div>
             <div class="menuitem" id="skills">
                 <div class="content">
-                    My Skills
+			<h1>My Skills</h1>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quas, reiciendis harum culpa dolorem illo pariatur corporis ullam mollitia non, maiores porro maxime quaerat laborum! Iusto debitis voluptates nemo tenetur, quas culpa aliquam facere eaque
+                        aut sapiente enim saepe omnis. Perspiciatis obcaecati modi laboriosam, earum aperiam quod, at cupiditate laudantium tempore a, consequatur ea officia? Explicabo, commodi recusandae libero aliquid blanditiis repudiandae natus, placeat
+                        sunt tempora velit modi quidem excepturi vitae aspernatur incidunt quisquam doloremque iusto ducimus iure facilis officiis. Iste ea, labore! At voluptates accusamus illum! Iste officia harum rem molestias quasi, distinctio dolores,
+                        accusamus asperiores sapiente debitis repellendus alias eligendi itaque fugit vel nam obcaecati reprehenderit ex saepe molestiae modi? Eaque, sit necessitatibus nesciunt quibusdam odio voluptatibus itaque libero porro quas minima
+                        veniam dolorem cum, rerum ducimus distinctio voluptas ut illo, velit, ad tempora ex? Id doloremque beatae, porro non voluptatum dicta, possimus, quidem, vel modi rem fuga consectetur quibusdam.
+                    </p>
+
+                    <p>
+                        Explicabo, commodi recusandae libero aliquid blanditiis repudiandae natus, placeat sunt tempora velit modi quidem excepturi vitae aspernatur incidunt quisquam doloremque iusto ducimus iure facilis officiis. Iste ea, labore! At voluptates accusamus illum!
+                        Iste officia harum rem molestias quasi, distinctio dolores, accusamus asperiores sapiente debitis repellendus alias eligendi itaque fugit vel nam obcaecati reprehenderit ex saepe molestiae modi? Eaque, sit necessitatibus nesciunt
+                        quibusdam odio voluptatibus itaque libero porro quas minima veniam dolorem cum, rerum ducimus distinctio voluptas ut illo, velit, ad tempora ex? Id doloremque beatae, porro non voluptatum dicta, possimus, quidem, vel modi rem fuga
+                        consectetur quibusdam.
+                    </p>
                     <button class="btnclose" onclick="var m=document.getElementById('skills');cl(m,2)">Close</button>
                 </div>
             </div>
             <div class="menuitem" id="contact">
                 <div class="content">
-                    Contacts
+			<h1>Contacts</h1>
+			<h1>About</h1>
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quas, reiciendis harum culpa dolorem illo pariatur corporis ullam mollitia non, maiores porro maxime quaerat laborum! Iusto debitis voluptates nemo tenetur, quas culpa aliquam facere eaque
+                        aut sapiente enim saepe omnis. Perspiciatis obcaecati modi laboriosam, earum aperiam quod, at cupiditate laudantium tempore a, consequatur ea officia? Explicabo, commodi recusandae libero aliquid blanditiis repudiandae natus, placeat
+                        sunt tempora velit modi quidem excepturi vitae aspernatur incidunt quisquam doloremque iusto ducimus iure facilis officiis. Iste ea, labore! At voluptates accusamus illum! Iste officia harum rem molestias quasi, distinctio dolores,
+                        accusamus asperiores sapiente debitis repellendus alias eligendi itaque fugit vel nam obcaecati reprehenderit ex saepe molestiae modi? Eaque, sit necessitatibus nesciunt quibusdam odio voluptatibus itaque libero porro quas minima
+                        veniam dolorem cum, rerum ducimus distinctio voluptas ut illo, velit, ad tempora ex? Id doloremque beatae, porro non voluptatum dicta, possimus, quidem, vel modi rem fuga consectetur quibusdam.
+                    </p>
+
+                    <p>
+                        Explicabo, commodi recusandae libero aliquid blanditiis repudiandae natus, placeat sunt tempora velit modi quidem excepturi vitae aspernatur incidunt quisquam doloremque iusto ducimus iure facilis officiis. Iste ea, labore! At voluptates accusamus illum!
+                        Iste officia harum rem molestias quasi, distinctio dolores, accusamus asperiores sapiente debitis repellendus alias eligendi itaque fugit vel nam obcaecati reprehenderit ex saepe molestiae modi? Eaque, sit necessitatibus nesciunt
+                        quibusdam odio voluptatibus itaque libero porro quas minima veniam dolorem cum, rerum ducimus distinctio voluptas ut illo, velit, ad tempora ex? Id doloremque beatae, porro non voluptatum dicta, possimus, quidem, vel modi rem fuga
+                        consectetur quibusdam.
+                    </p>
                     <button class="btnclose" onclick="var m=document.getElementById('contact');cl(m,3)">Close</button>
                 </div>
             </div>
